core/monitoring/grafana/headless-service.yaml
---
# Source: kube-prometheus-stack/charts/grafana/templates/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitoring-grafana-headless
  namespace: default
  labels:
    helm.sh/chart: grafana-9.2.10
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: monitoring
    app.kubernetes.io/version: "12.0.2"
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/instance: monitoring
  type: ClusterIP
  ports:
  - name: gossip-tcp
    port: 9094
