core/monitoring/grafana/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: default
  annotations:
    external-dns.alpha.kubernetes.io/target: 202.215.58.76
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`grafana.mtaku3.com`)
    kind: Rule
    services:
      - name: monitoring-grafana
        port: http-web
  tls:
    secretName: grafana-tls
